src/test/deca/context/invalid/provided/invalid_int.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: Right value doesn't match the expected type
{int x = 2;
//int x = 5;
int y = readFloat();
}

/*  Commentaire  */
